# compressed-sorting-AD3

./: .gitignore  CMakeLists.txt  README.md  feedback.txt  huffsort  huffsort3  sources
.run/: large_compress.run.xml  large_extract.run.xml  large_sort.run.xml  large_tree.run.xml  medium_compress.run.xml  medium_extract.run.xml  medium_sort.run.xml  medium_tree.run.xml  test_compress.run.xml  test_extract.run.xml  test_sort.run.xml  test_tree.run.xml  tiny_compress.run.xml  tiny_extract.run.xml  tiny_sort.run.xml  tiny_tree.run.xml
data/: download.sh  example.txt  output.txt  test.txt  tiny.txt
extra/: bedenkenissen.txt
src/: main.c
src/IO/: bit_input.c  bit_input.h
src/IO/bit_input/: bit_io.c  bit_io.h
src/compress/: compress.c  compress.h  compress_file.c  compress_file.h  parse_tree_file.c  parse_tree_file.h
src/extract/: decoder.c  decoder.h  extract.c  extract.h  prefix_node.c  prefix_node.h  prefix_tree.c  prefix_tree.h
src/sort/: block_merge.c  block_merge.h  heap_sort.c  heap_sort.h  sort.c  sort.h
src/tests/: test_example.c
src/tests/integration_tests/: all_tests.sh  test_compress_extract.sh
src/tree/: hu_tucker.c  hu_tucker.h  make_OPC.c  make_OPC.h  tree.c  tree.h
src/tree/linkedList/: linkedlist.c  linkedlist.h
